# kamkar

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  dev.sh  fragment.glsl  geometry.glsl  graphics.cpp  kamkar.h  kamkar.sln  kamkar.vcxproj  kamkar.vcxproj.filters  main.cpp  module.modulemap  noise.cpp  test.sh  tilemap.cpp  tilemap.test.cpp  tilemapold.cpp  ut.hpp  util.h  vec2.cpp  vertex.glsl  window.cpp
dependencies/include/: noise.h  stb_image.h
shaders/entity/: fragment.glsl  vertex.glsl
shaders/hex/: fragment.glsl  geometry.glsl  vertex.glsl
